tests/parsing/smtlib/poly/errors/012_forall_unclosed_2.psmt2
(set-logic ALL)
(assert (forall ((x int)) x agalaglagla))
